--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ body {
 
 ul {
   background: #fafafa;
+  list-style: none;
 }
 
 button {
@@ -37,6 +38,7 @@ button {
   display: flex;
   border-right: 1px solid gray;
   margin-top: 1.2rem !important;
+  margin-left: 8rem;
 }
 
 .oval {
@@ -54,6 +56,7 @@ button {
   border-radius: 50%;
   border-left: 3px solid transparent;
   transform: rotate(45deg);
+  margin-left: 15rem;
 }
 
 .percent {
@@ -110,6 +113,7 @@ button {
   display: flex !important;
   flex-direction: column;
   margin-top: 0.5rem;
+  margin-right: 5rem;
 }
 
 .rangi {
@@ -221,4 +225,22 @@ button {
   line-height: normal;
   letter-spacing: -0.18px;
   color: #888;
+}
+
+.list-group-item {
+  position: relative;
+  display: flex;
+  padding: 10px 15px;
+  margin-bottom: -1px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+}
+
+.justify-content-between {
+  justify-content: space-between;
+}
+
+.navbar-nav > li > a {
+  margin: 3rem;
+  line-height: 20px;
 }
