--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ button {
   border-radius: 50%;
   border-left: 3px solid transparent;
   transform: rotate(45deg);
-  margin-left: 15rem;
+  margin-left: 3rem;
 }
 
 .percent {
@@ -113,7 +113,7 @@ button {
   display: flex !important;
   flex-direction: column;
   margin-top: 0.5rem;
-  margin-right: 5rem;
+  margin-right: 3rem;
 }
 
 .rangi {
@@ -140,7 +140,7 @@ button {
   margin: 0.75rem 0 0.563rem 3.688rem;
   padding: 0.438rem 1.188rem 0.5rem 1.375rem;
   border-radius: 3px;
-  background-color: var(--azure);
+  background-color: #0290ff;
 }
 
 .chapter {
@@ -243,4 +243,9 @@ button {
 .navbar-nav > li > a {
   margin: 3rem;
   line-height: 20px;
+}
+
+.container-fluid {
+  border: 1px solid #ddd;
+  padding: 0 11rem 0 12.5rem;
 }
